# discovery_board

./: Cargo.toml  debugger.sh  openocd.gdb  output.sh
.cargo/: config.toml
src/: lib.rs
