[package]
name = "discovery_board"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "led_roulette"

[[bin]]
name = "registers"

[lib]
name = "disc_aux"
path = "src/lib.rs"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
panic-itm = "0.4.2"
stm32f3-discovery = "0.6.0"
volatile = "0.4.3"

[dependencies.stm32f3]
version = "0.12.1"
features = ["stm32f303", "rt"]
